[gd_scene load_steps=4 format=3 uid="uid://e5vfiu31puja"]

[ext_resource type="Script" path="res://GameUI.gd" id="1_ablnc"]

[sub_resource type="LabelSettings" id="LabelSettings_4he4v"]
font_size = 31

[sub_resource type="LabelSettings" id="LabelSettings_i7t2d"]
font_size = 32

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(2.5, 2.5)
script = ExtResource("1_ablnc")

[node name="TimeElapsed" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TimeElapsed"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 60.0
grow_horizontal = 0
color = Color(0.207843, 0.207843, 0.207843, 0.352941)

[node name="Label" type="Label" parent="TimeElapsed/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00"
label_settings = SubResource("LabelSettings_4he4v")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="DeathCounter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="DeathCounter"]
layout_mode = 1
offset_right = 157.0
offset_bottom = 60.0
color = Color(0.207843, 0.207843, 0.207843, 0.352941)

[node name="Label" type="Label" parent="DeathCounter/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -30.0
offset_right = 132.0
offset_bottom = 30.0
grow_vertical = 2
text = " Deaths: 0 "
label_settings = SubResource("LabelSettings_4he4v")
vertical_alignment = 1

[node name="EscLabel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EscLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -224.0
offset_right = 145.0
offset_bottom = -201.0
grow_horizontal = 2
grow_vertical = 2
text = "  Press ESCAPE to return to main menu  "
label_settings = SubResource("LabelSettings_i7t2d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FadeOutTimer" type="Timer" parent="EscLabel"]
wait_time = 0.75
one_shot = true

[node name="FadeOutStartDelayTimer" type="Timer" parent="EscLabel"]
wait_time = 1.25
one_shot = true
autostart = true

[connection signal="timeout" from="EscLabel/FadeOutStartDelayTimer" to="." method="_on_fade_out_start_delay_timer_timeout"]
